@@ -24,6 +24,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7264: Fix a possible deadlock when deallocating thread-local objects
+  which are part of a reference cycle.
+
 - Issue #7249: Methods of io.BytesIO now allow `long` as well as `int`
   arguments.
 
